# CS598_DLH_Project

./: CNN_DDI_final.py  CNN_DDI_tf.py  CNN_DDI_torch.py  DDIMDL.py  DL4H_Team_31.ipynb  DL4H_Team_31_Final.ipynb  DRKG_drug_spider.py  Drug.db  PRESENTATION.md  Plot_Result.ipynb  Pytorch_CNN_DDI.ipynb  README.md  create_db.py  drug_category.db  pyproject.toml  smile+target+enzyme_all_DDIMDL.csv  smile+target+enzyme_each_DDIMDL.csv
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: CNN_DDI.ipynb
reproduction_output/0_Result Analysis/: ~$Reproduction Results Comparison.xlsx
reproduction_output/Ablation - CNNDDI_Loss func_Cosine sim/: Output.rtf  pathway+target+enzyme+category_all_CNN_DDI.csv  pathway+target+enzyme+category_each_CNN_DDI.csv
reproduction_output/Ablation - CNNDDI_Loss func_kl_/: Output.rtf  pathway+target+enzyme+category_all_CNN_DDI.csv  pathway+target+enzyme+category_each_CNN_DDI.csv
reproduction_output/Ablation - CNNDDI_No residual block/: Output.txt  pathway+target+enzyme+category_all_CNN_DDI.csv  pathway+target+enzyme+category_each_CNN_DDI.csv
reproduction_output/Table 1 - CNNDDI_Sim func_Cosine/: Output.rtf  pathway+target+enzyme+category_all_CNN_DDI.csv  pathway+target+enzyme+category_each_CNN_DDI.csv
reproduction_output/Table 1 - CNNDDI_Sim func_Gaussian/: Output.rtf  pathway+target+enzyme+category_all_CNN_DDI.csv  pathway+target+enzyme+category_each_CNN_DDI.csv
reproduction_output/Table 2 - CNNDDI category/: Output.txt  category_all_CNN_DDI.csv  category_each_CNN_DDI.csv
reproduction_output/Table 2 - CNNDDI enzyme/: Output.txt  (+2 more)
(+72 files in other folders)
