
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "Keras==2.2.4",
    "numpy==1.18.1",
    "pandas==1.0.1",
    "scikit-learn==0.21.2",
    "stanfordnlp==0.2.0",
    "tensorflow==1.15",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "xlrd==1.2.0",
    "lxml>=5.1.0",
    "torch>=1.13.1",
    "psutil>=5.9.8",
]
requires-python = ">=3.7"
